--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
-    <link rel="stylesheet" href="../styles/login.css">
+    <link rel="stylesheet" href="../styles/main.css">
 </head>
-<body>
+<body class="login-sec">
     <div class="login-container">
         <h2>Login</h2>
         <form id="loginForm">
