--- a/src/pages/Main.html
+++ b/src/pages/Main.html
@@ -12,7 +12,7 @@
         <h1>Assignment Center 2.0</h1>
         <nav>
             <a href="main.html">Home</a>
-            <a href="pages/tasks.html">Aufgaben</a>
+            <a href="pages/task.html">Aufgaben</a>
             <a href="pages/profile.html">Profil</a>
         </nav>
     </header>
@@ -21,6 +21,20 @@
     <main>
         <h2>Willkommen im Assignment Center</h2>
         <p>Finde oder poste deine Aufgaben einfach und schnell!</p>
+
+        <!-- Fakultäten-Auswahl -->
+        <div class="faculty-selection">
+            <label for="faculty">Wähle deine Fakultät:</label>
+            <select id="faculty">
+                <option value="">-- Fakultät auswählen --</option>
+                <option value="engineering">Ingenieurwissenschaften</option>
+                <option value="business">Wirtschaftswissenschaften</option>
+                <option value="law">Rechtswissenschaften</option>
+                <option value="medicine">Medizin</option>
+                <option value="arts">Geisteswissenschaften</option>
+            </select>
+            <button id="submitBtn">Submit</button>
+        </div>
     </main>
 
     <!-- Footer -->
@@ -28,6 +42,6 @@
         <p>&copy; 2024 Assignment Center</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="../scripts/main.js"></script>
 </body>
 </html>
