almost last update HCI

--- a/src/pages/Tutor/profileTutor.html
+++ b/src/pages/Tutor/profileTutor.html
@@ -9,7 +9,7 @@
   <body>
     <!-- Header -->
     <header>
-      <h1>Assignment Center 2.0</h1>
+      <h1>Assignment Center 2.0 (Tutor)</h1>
       <nav>
         <a href="../pages/main.html">Home</a>
             <a href="../pages/profile.html">Profil</a>
