--- a/src/pages/Main.html
+++ b/src/pages/Main.html
@@ -11,9 +11,9 @@
     <header>
         <h1>Assignment Center 2.0</h1>
         <nav>
-            <a href="main.html">Home</a>
-            <a href="pages/task.html">Aufgaben</a>
-            <a href="pages/profile.html">Profil</a>
+            <a href="../pages/main.html">Home</a>
+            <a href="../pages/profile.html">Profil</a>
+            <a href="../pages/login.html">Abmelden</a>
         </nav>
     </header>
 
