--- a/src/pages/Tutor/assignmentTutor.html
+++ b/src/pages/Tutor/assignmentTutor.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Aufgaben Übersicht</title>
+    <!-- Verlinkung zum Stylesheet für das Layout -->
     <link rel="stylesheet" href="../../styles/main.css" />
   </head>
   <body>
-    <!-- Header -->
+    <!-- Header mit Navigation -->
     <header>
       <h1 id="headerTitle">Assignment Center 2.0</h1>
       <nav>
+        <!-- Navigationslinks zu den verschiedenen Tutor-Seiten -->
         <a href="../Tutor/tutorMain.html">Home</a>
         <a href="../Tutor/assignmentTutor.html">Aufgaben</a>
         <a href="../Tutor/profileTutor.html">Profil</a>
@@ -18,12 +20,12 @@
       </nav>
     </header>
 
-    <!-- Main Content -->
+    <!-- Main Content (Hauptinhalt) -->
     <main>
       <h2>Aufgaben Übersicht</h2>
       <p id="facultyName" class="faculty-display"></p>
 
-      <!-- Aufgaben-Tabelle -->
+      <!-- Tabelle zur Anzeige von Aufgaben -->
       <table id="assignmentTable">
         <thead>
           <tr>
@@ -36,11 +38,13 @@
           </tr>
         </thead>
         <tbody>
+          <!-- Beispiel-Daten für Projekte und deren Status -->
           <tr id="row-projekt-a">
             <td>Projekt A</td>
             <td>Max Mustermann</td>
             <td>10 Stunden</td>
             <td>
+              <!-- Status des Projekts: Noch nicht bearbeitet -->
               <span
                 class="status-label nicht-fertig"
                 id="status-projekt-a"
@@ -49,6 +53,7 @@
               >
             </td>
             <td>
+              <!-- Link zum Download der Datei für Projekt A -->
               <a
                 href="../../public/Thinking.pdf"
                 download="Projekt A - Max Mustermann.pdf"
@@ -62,6 +67,7 @@
             <td>Lisa Müller</td>
             <td>8 Stunden</td>
             <td>
+              <!-- Status des Projekts: Noch nicht bearbeitet -->
               <span
                 class="status-label nicht-fertig"
                 id="status-projekt-b"
@@ -70,6 +76,7 @@
               >
             </td>
             <td>
+              <!-- Link zum Download der Datei für Projekt B -->
               <a
                 href="../../public/Thinking.pdf"
                 download="Projekt B - Lisa Müller.pdf"
@@ -83,6 +90,7 @@
             <td>John Doe</td>
             <td>15 Stunden</td>
             <td>
+              <!-- Status des Projekts: In Bearbeitung -->
               <span
                 class="status-label im-prozess"
                 id="status-projekt-c"
@@ -91,6 +99,7 @@
               >
             </td>
             <td>
+              <!-- Link zum Download der Datei für Projekt C -->
               <a
                 href="../../public/Thinking.pdf"
                 download="Projekt C - John Doe.pdf"
@@ -102,10 +111,11 @@
         </tbody>
       </table>
 
-      <!-- Verstecktes Formular -->
+      <!-- Verstecktes Formular zum Bearbeiten der Aufgaben -->
       <div id="uploadSection" style="display: none; margin-top: 20px">
         <h3>Bearbeitung abschließen</h3>
         <form id="updateForm">
+          <!-- Dropdown zur Auswahl des Projekts -->
           <label for="projectSelect">Projekt auswählen:</label>
           <select id="projectSelect" required>
             <option value="Projekt A">Projekt A</option>
@@ -113,9 +123,15 @@
             <option value="Projekt C">Projekt C</option>
           </select>
 
+          <!-- Eingabefeld für die Punktezahl -->
           <label for="points">Punkte eingeben:</label>
           <input type="number" id="points" min="0" max="100" required />
 
+          <!-- Eingabefeld für die Kommentare -->
+          <label for="points">Kommentare:</label>
+          <input type="text" id="comment"/>
+
+          <!-- Eingabefeld zum Hochladen der bearbeiteten Datei -->
           <label for="fileUpload">Bearbeitete Datei hochladen:</label>
           <input type="file" id="fileUpload" accept=".pdf" required />
 
@@ -123,27 +139,30 @@
         </form>
       </div>
 
-      <!-- Button zum Anzeigen des Formulars -->
+      <!-- Button zum Anzeigen des Formulars zum Bearbeiten -->
       <button id="toggleFormButton" style="margin-top: 20px">
         Bearbeitete Datei hochladen
       </button>
     </main>
 
-    <!-- Footer -->
+    <!-- Footer mit Copyright -->
     <footer>
       <p>&copy; 2024 Assignment Center | Alle Rechte vorbehalten</p>
     </footer>
 
+    <!-- JavaScript für Interaktionen -->
     <script>
-      // JavaScript für Interaktionen
+      // Klick-Event für den Button, der das Formular anzeigt oder verbirgt
       document
         .getElementById("toggleFormButton")
         .addEventListener("click", () => {
           const uploadSection = document.getElementById("uploadSection");
+          // Toggle Sichtbarkeit des Formulars
           uploadSection.style.display =
             uploadSection.style.display === "none" ? "block" : "none";
         });
 
+      // Event-Listener für das Absenden des Formulars
       document
         .getElementById("updateForm")
         .addEventListener("submit", (event) => {
@@ -151,7 +170,7 @@
           const project = document.getElementById("projectSelect").value;
           const points = document.getElementById("points").value;
 
-          // Status und Punkte der entsprechenden Zeile aktualisieren
+          // Status und Punkte der entsprechenden Zeile in der Tabelle aktualisieren
           const statusCell = document.getElementById(
             `status-${project.toLowerCase().replace(/\s+/g, "-")}`
           );
@@ -162,7 +181,7 @@
             `row-${project.toLowerCase().replace(/\s+/g, "-")}`
           );
 
-          // Wenn der Status nicht "Fertig" ist, setze ihn auf "Fertig"
+          // Wenn der Status noch nicht "Fertig" ist, setze ihn auf "Fertig"
           if (statusCell.dataset.status !== "Fertig") {
             statusCell.textContent = "Fertig";
             statusCell.dataset.status = "Fertig";
@@ -173,7 +192,7 @@
           // Die Punkte in der Tabelle aktualisieren
           pointsCell.textContent = `${points} Punkte`;
 
-          // Feedback anzeigen und Formular zurücksetzen
+          // Erfolgsnachricht anzeigen und Formular zurücksetzen
           alert(`${project} wurde erfolgreich aktualisiert!`);
           document.getElementById("updateForm").reset();
           document.getElementById("uploadSection").style.display = "none";
