--- a/src/pages/Tutor/profileTutor.html
+++ b/src/pages/Tutor/profileTutor.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Profil - Assignment Center 2.0</title>
-    <link rel="stylesheet" href="../styles/main.css" />
+    <link rel="stylesheet" href="../../styles/main.css" />
   </head>
   <body>
     <!-- Header -->
     <header>
       <h1>Assignment Center 2.0 (Tutor)</h1>
       <nav>
-        <a href="../pages/main.html">Home</a>
-            <a href="../pages/profile.html">Profil</a>
-            <a href="../pages/login.html">Abmelden</a>
+        <a href="../Tutor/tutorMain.html">Home</a>
+        <a href="../Tutor/profileTutor.html">Profil</a>
+        <a href="../../pages/login.html">Abmelden</a>
       </nav>
     </header>
 
@@ -26,7 +26,7 @@
           <div class="profile-picture">
             <img
               id="profileImg"
-              src="../../public/no-user.png"
+              src="../../../public/no-user.png"
               alt="Profilbild"
             />
           </div>
