--- a/src/pages/Tutor/assignmentTutor.html
+++ b/src/pages/Tutor/assignmentTutor.html
@@ -55,7 +55,7 @@
             <td>
               <!-- Link zum Download der Datei für Projekt A -->
               <a
-                href="../../public/Thinking.pdf"
+                href="../../../public/Thinking.pdf"
                 download="Projekt A - Max Mustermann.pdf"
                 >Projekt A - Datei</a
               >
